Import necessary libraries and load csv files

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -17,24 +17,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries here; add more as necessary\n",
+    "# Standard Library imports\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Third party imports\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "import seaborn as sb\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# magic word for producing visualizations in notebook\n",
-    "%matplotlib inline\n",
-    "\n",
-    "'''\n",
-    "Import note: The classroom currently uses sklearn version 0.19.\n",
-    "If you need to use an imputer, it is available in sklearn.preprocessing.Imputer,\n",
-    "instead of sklearn.impute as in newer versions of sklearn.\n",
-    "'''"
+    "# Magic word for producing visualizations in notebook\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -59,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the general demographics data.\n",
-    "azdias = \n",
+    "azdias = pd.read_csv('Udacity_AZDIAS_Subset.csv', sep=';')\n",
     "\n",
     "# Load in the feature summary file.\n",
-    "feat_info = "
+    "feat_info = pd.read_csv('AZDIAS_Feature_Summary.csv', sep=';')"
    ]
   },
   {
