Assess missing values and convert to numpy nans

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -2652,19 +2652,287 @@
     "The feature summary file contains a summary of properties for each demographics data column. You will use this file to help you make cleaning decisions during this stage of the project. First of all, you should assess the demographics data in terms of missing data. Pay attention to the following points as you perform your analysis, and take notes on what you observe. Make sure that you fill in the **Discussion** cell with your findings and decisions at the end of each step that has one!\n",
     "\n",
     "#### Step 1.1.1: Convert Missing Value Codes to NaNs\n",
-    "The fourth column of the feature attributes summary (loaded in above as `feat_info`) documents the codes from the data dictionary that indicate missing or unknown data. While the file encodes this as a list (e.g. `[-1,0]`), this will get read in as a string object. You'll need to do a little bit of parsing to make use of it to identify and clean the data. Convert data that matches a 'missing' or 'unknown' value code into a numpy NaN value. You might want to see how much data takes on a 'missing' or 'unknown' code, and how much data is naturally missing, as a point of interest.\n",
-    "\n",
-    "**As one more reminder, you are encouraged to add additional cells to break up your analysis into manageable chunks.**"
+    "The fourth column of the feature attributes summary (loaded in above as `feat_info`) documents the codes from the data dictionary that indicate missing or unknown data. While the file encodes this as a list (e.g. `[-1,0]`), this will get read in as a string object. You'll need to do a little bit of parsing to make use of it to identify and clean the data. Convert data that matches a 'missing' or 'unknown' value code into a numpy NaN value. You might want to see how much data takes on a 'missing' or 'unknown' code, and how much data is naturally missing, as a point of interest."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Non coded missing values per column:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "AGER_TYP                      0\n",
+       "ALTERSKATEGORIE_GROB          0\n",
+       "ANREDE_KZ                     0\n",
+       "CJT_GESAMTTYP              4854\n",
+       "FINANZ_MINIMALIST             0\n",
+       "FINANZ_SPARER                 0\n",
+       "FINANZ_VORSORGER              0\n",
+       "FINANZ_ANLEGER                0\n",
+       "FINANZ_UNAUFFAELLIGER         0\n",
+       "FINANZ_HAUSBAUER              0\n",
+       "FINANZTYP                     0\n",
+       "GEBURTSJAHR                   0\n",
+       "GFK_URLAUBERTYP            4854\n",
+       "GREEN_AVANTGARDE              0\n",
+       "HEALTH_TYP                    0\n",
+       "LP_LEBENSPHASE_FEIN        4854\n",
+       "LP_LEBENSPHASE_GROB        4854\n",
+       "LP_FAMILIE_FEIN            4854\n",
+       "LP_FAMILIE_GROB            4854\n",
+       "LP_STATUS_FEIN             4854\n",
+       "LP_STATUS_GROB             4854\n",
+       "NATIONALITAET_KZ              0\n",
+       "PRAEGENDE_JUGENDJAHRE         0\n",
+       "RETOURTYP_BK_S             4854\n",
+       "SEMIO_SOZ                     0\n",
+       "SEMIO_FAM                     0\n",
+       "SEMIO_REL                     0\n",
+       "SEMIO_MAT                     0\n",
+       "SEMIO_VERT                    0\n",
+       "SEMIO_LUST                    0\n",
+       "SEMIO_ERL                     0\n",
+       "SEMIO_KULT                    0\n",
+       "SEMIO_RAT                     0\n",
+       "SEMIO_KRIT                    0\n",
+       "SEMIO_DOM                     0\n",
+       "SEMIO_KAEM                    0\n",
+       "SEMIO_PFLICHT                 0\n",
+       "SEMIO_TRADV                   0\n",
+       "SHOPPER_TYP                   0\n",
+       "SOHO_KZ                   73499\n",
+       "TITEL_KZ                  73499\n",
+       "VERS_TYP                      0\n",
+       "ZABEOTYP                      0\n",
+       "ALTER_HH                  73499\n",
+       "ANZ_PERSONEN              73499\n",
+       "ANZ_TITEL                 73499\n",
+       "HH_EINKOMMEN_SCORE        18348\n",
+       "KK_KUNDENTYP             584612\n",
+       "W_KEIT_KIND_HH           107602\n",
+       "WOHNDAUER_2008            73499\n",
+       "ANZ_HAUSHALTE_AKTIV       93148\n",
+       "ANZ_HH_TITEL              97008\n",
+       "GEBAEUDETYP               93148\n",
+       "KONSUMNAEHE               73969\n",
+       "MIN_GEBAEUDEJAHR          93148\n",
+       "OST_WEST_KZ               93148\n",
+       "WOHNLAGE                  93148\n",
+       "CAMEO_DEUG_2015           98979\n",
+       "CAMEO_DEU_2015            98979\n",
+       "CAMEO_INTL_2015           98979\n",
+       "KBA05_ANTG1              133324\n",
+       "KBA05_ANTG2              133324\n",
+       "KBA05_ANTG3              133324\n",
+       "KBA05_ANTG4              133324\n",
+       "KBA05_BAUMAX             133324\n",
+       "KBA05_GBZ                133324\n",
+       "BALLRAUM                  93740\n",
+       "EWDICHTE                  93740\n",
+       "INNENSTADT                93740\n",
+       "GEBAEUDETYP_RASTER        93155\n",
+       "KKK                      121196\n",
+       "MOBI_REGIO               133324\n",
+       "ONLINE_AFFINITAET          4854\n",
+       "REGIOTYP                 121196\n",
+       "KBA13_ANZAHL_PKW         105800\n",
+       "PLZ8_ANTG1               116515\n",
+       "PLZ8_ANTG2               116515\n",
+       "PLZ8_ANTG3               116515\n",
+       "PLZ8_ANTG4               116515\n",
+       "PLZ8_BAUMAX              116515\n",
+       "PLZ8_HHZ                 116515\n",
+       "PLZ8_GBZ                 116515\n",
+       "ARBEIT                    97216\n",
+       "ORTSGR_KLS9               97216\n",
+       "RELAT_AB                  97216\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Identify missing or unknown data values and convert them to NaNs.\n",
-    "\n"
+    "\n",
+    "# Non coded missing Values per Column\n",
+    "print('Non coded missing values per column:')\n",
+    "azdias.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coded Missing Values per column:\n",
+      "\n",
+      "AGER_TYP                  685843\n",
+      "ALTERSKATEGORIE_GROB      2881\n",
+      "ANREDE_KZ                 0\n",
+      "CJT_GESAMTTYP             0\n",
+      "FINANZ_MINIMALIST         0\n",
+      "FINANZ_SPARER             0\n",
+      "FINANZ_VORSORGER          0\n",
+      "FINANZ_ANLEGER            0\n",
+      "FINANZ_UNAUFFAELLIGER     0\n",
+      "FINANZ_HAUSBAUER          0\n",
+      "FINANZTYP                 0\n",
+      "GEBURTSJAHR               392318\n",
+      "GFK_URLAUBERTYP           0\n",
+      "GREEN_AVANTGARDE          0\n",
+      "HEALTH_TYP                111196\n",
+      "LP_LEBENSPHASE_FEIN       92778\n",
+      "LP_LEBENSPHASE_GROB       89718\n",
+      "LP_FAMILIE_FEIN           72938\n",
+      "LP_FAMILIE_GROB           72938\n",
+      "LP_STATUS_FEIN            0\n",
+      "LP_STATUS_GROB            0\n",
+      "NATIONALITAET_KZ          108315\n",
+      "PRAEGENDE_JUGENDJAHRE     108164\n",
+      "RETOURTYP_BK_S            0\n",
+      "SEMIO_SOZ                 0\n",
+      "SEMIO_FAM                 0\n",
+      "SEMIO_REL                 0\n",
+      "SEMIO_MAT                 0\n",
+      "SEMIO_VERT                0\n",
+      "SEMIO_LUST                0\n",
+      "SEMIO_ERL                 0\n",
+      "SEMIO_KULT                0\n",
+      "SEMIO_RAT                 0\n",
+      "SEMIO_KRIT                0\n",
+      "SEMIO_DOM                 0\n",
+      "SEMIO_KAEM                0\n",
+      "SEMIO_PFLICHT             0\n",
+      "SEMIO_TRADV               0\n",
+      "SHOPPER_TYP               111196\n",
+      "SOHO_KZ                   0\n",
+      "TITEL_KZ                  815562\n",
+      "VERS_TYP                  111196\n",
+      "ZABEOTYP                  0\n",
+      "ALTER_HH                  236768\n",
+      "ANZ_PERSONEN              0\n",
+      "ANZ_TITEL                 0\n",
+      "HH_EINKOMMEN_SCORE        0\n",
+      "KK_KUNDENTYP              0\n",
+      "W_KEIT_KIND_HH            40386\n",
+      "WOHNDAUER_2008            0\n",
+      "ANZ_HAUSHALTE_AKTIV       6463\n",
+      "ANZ_HH_TITEL              0\n",
+      "GEBAEUDETYP               0\n",
+      "KONSUMNAEHE               0\n",
+      "MIN_GEBAEUDEJAHR          0\n",
+      "OST_WEST_KZ               0\n",
+      "WOHNLAGE                  0\n",
+      "CAMEO_DEUG_2015           373\n",
+      "CAMEO_DEU_2015            373\n",
+      "CAMEO_INTL_2015           373\n",
+      "KBA05_ANTG1               0\n",
+      "KBA05_ANTG2               0\n",
+      "KBA05_ANTG3               0\n",
+      "KBA05_ANTG4               0\n",
+      "KBA05_BAUMAX              343200\n",
+      "KBA05_GBZ                 0\n",
+      "BALLRAUM                  0\n",
+      "EWDICHTE                  0\n",
+      "INNENSTADT                0\n",
+      "GEBAEUDETYP_RASTER        0\n",
+      "KKK                       36868\n",
+      "MOBI_REGIO                0\n",
+      "ONLINE_AFFINITAET         0\n",
+      "REGIOTYP                  36868\n",
+      "KBA13_ANZAHL_PKW          0\n",
+      "PLZ8_ANTG1                0\n",
+      "PLZ8_ANTG2                0\n",
+      "PLZ8_ANTG3                0\n",
+      "PLZ8_ANTG4                0\n",
+      "PLZ8_BAUMAX               0\n",
+      "PLZ8_HHZ                  0\n",
+      "PLZ8_GBZ                  0\n",
+      "ARBEIT                    159\n",
+      "ORTSGR_KLS9               58\n",
+      "RELAT_AB                  159\n",
+      "\n",
+      "Dataset azdias has 4,896,838 missing, uncoded data points and 3,477,091 data points that include a missing or unknown code.\n",
+      "\n",
+      "The total missing data points for the dataset is 8,373,929.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find total coded missing or unknown values\n",
+    "print(\"Coded Missing Values per column:\\n\")\n",
+    "\n",
+    "coded_missing_unknown = 0\n",
+    "for idx in range(feat_info.shape[0]):\n",
+    "    cd_mis_unk = feat_info.iloc[idx]['missing_or_unknown']\n",
+    "    cd_mis_unk = cd_mis_unk.strip('[]').split(sep=',')\n",
+    "    cd_mis_unk = [\n",
+    "        int(value) if\n",
+    "        (value != 'X' and value != 'XX' and value != '') else value\n",
+    "        for value in cd_mis_unk\n",
+    "    ]\n",
+    "    col_missing_val = 0\n",
+    "    for column_value in azdias.iloc[:, idx]:\n",
+    "        for coded_value in cd_mis_unk:\n",
+    "            if column_value == coded_value:\n",
+    "                col_missing_val += 1\n",
+    "                coded_missing_unknown += 1\n",
+    "    print(f\"{azdias.columns[idx]:25s} {col_missing_val:}\")\n",
+    "\n",
+    "# Find total non coded missing values\n",
+    "missing_unknown = azdias.isnull().sum().sum()\n",
+    "\n",
+    "print(\"\\nDataset azdias has {:,} missing, uncoded data points and {:,} data points that include a missing or unknown code.\"\n",
+    "      .format(missing_unknown, coded_missing_unknown))\n",
+    "\n",
+    "print(\"\\nThe total missing data points for the dataset is {:,}.\".format(\n",
+    "    missing_unknown + coded_missing_unknown))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "All coded and non coded missing data points have been replaced with NaNs for a total of 8,373,929 NaNs.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert coded missing and unknown values to NaNs\n",
+    "for idx in range(feat_info.shape[0]):\n",
+    "    cd_mis_unk = feat_info.iloc[idx]['missing_or_unknown']\n",
+    "    cd_mis_unk = cd_mis_unk.strip('[]').split(sep=',')\n",
+    "    cd_mis_unk = [\n",
+    "        int(value) if\n",
+    "        (value != 'X' and value != 'XX' and value != '') else value\n",
+    "        for value in cd_mis_unk\n",
+    "    ]\n",
+    "    azdias = azdias.replace({feat_info.iloc[idx]['attribute']: cd_mis_unk}, np.nan)\n",
+    "\n",
+    "print('\\nAll coded and non coded missing data points have been replaced with NaNs for a total of {:,} NaNs.'\n",
+    "      .format(azdias.isnull().sum().sum()))"
    ]
   },
   {
