Count datatypes and datatype features in low nan dataset

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -3252,12 +3252,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datatype \"ordinal\" has 49 features with a total of 285 values in azdias_low_nans dataset\n",
+      "\n",
+      "Datatype \"categorical\" has 18 features with a total of 138 values in azdias_low_nans dataset\n",
+      "\n",
+      "Datatype \"mixed\" has 6 features with a total of 101 values in azdias_low_nans dataset\n",
+      "\n",
+      "Datatype \"numeric\" has 6 features with a total of 1633 values in azdias_low_nans dataset\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# How many features are there of each data type?\n",
-    "\n"
+    "\n",
+    "# Drop rows in feat_info that are not in azdias_low_nans dataset in order to count datatype and features\n",
+    "rows_to_drop = ['AGER_TYP', 'GEBURTSJAHR', 'TITEL_KZ',\n",
+    "                'ALTER_HH', 'KK_KUNDENTYP', 'KBA05_BAUMAX']\n",
+    "\n",
+    "feat_info_dropped = feat_info[~feat_info.attribute.isin(rows_to_drop)]\n",
+    "feat_info_dropped.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# Identify different datatypes\n",
+    "datatypes = feat_info_dropped['type'].unique().tolist()\n",
+    "\n",
+    "# Count datatypes, features, and unique feature values\n",
+    "for datatype in datatypes:\n",
+    "    datatype_index = feat_info_dropped.index[feat_info_dropped['type'] == datatype]\n",
+    "    datatype_value_count = azdias_low_nans.iloc[:, datatype_index].nunique(axis=0).sum()\n",
+    "    print(\"Datatype \\\"{}\\\" has {} features with a total of {} values in azdias_low_nans dataset\\n\"\n",
+    "          .format(datatype, len(datatype_index), datatype_value_count))"
    ]
   },
   {
