Re-encode and one-hot encode categorical features

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -3305,23 +3305,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical Variables:\n",
+      "ANREDE_KZ            [2 1]\n",
+      "CJT_GESAMTTYP        [ 5.  3.  2.  4.  1.  6. nan]\n",
+      "FINANZTYP            [1 6 5 2 4 3]\n",
+      "GFK_URLAUBERTYP      [10.  1.  5. 12.  9.  3.  8. 11.  4.  7.  2.  6. nan]\n",
+      "GREEN_AVANTGARDE     [0 1]\n",
+      "LP_FAMILIE_FEIN      [ 5.  1. nan 10.  2.  7. 11.  8.  4.  6.  9.  3.]\n",
+      "LP_FAMILIE_GROB      [ 3.  1. nan  5.  2.  4.]\n",
+      "LP_STATUS_FEIN       [ 2.  3.  9.  4.  1. 10.  5.  8.  6.  7. nan]\n",
+      "LP_STATUS_GROB       [ 1.  2.  4.  5.  3. nan]\n",
+      "NATIONALITAET_KZ     [ 1.  3.  2. nan]\n",
+      "SHOPPER_TYP          [ 3.  2.  1.  0. nan]\n",
+      "SOHO_KZ              [1. 0.]\n",
+      "VERS_TYP             [ 2.  1. nan]\n",
+      "ZABEOTYP             [5 3 4 1 6 2]\n",
+      "GEBAEUDETYP          [8. 1. 3. 2. 6. 4. 5.]\n",
+      "OST_WEST_KZ          ['W' 'O']\n",
+      "CAMEO_DEUG_2015      ['8' '4' '2' '6' '1' '9' '5' '7' '3' nan]\n",
+      "CAMEO_DEU_2015       ['8A' '4C' '2A' '6B' '8C' '4A' '2D' '1A' '1E' '9D' '5C' '8B' '7A' '5D'\n",
+      " '9E' '9B' '1B' '3D' nan '4E' '4B' '3C' '5A' '7B' '9A' '6D' '6E' '2C' '7C'\n",
+      " '9C' '7D' '5E' '1D' '8D' '6C' '6A' '5B' '4D' '3A' '2B' '7E' '3B' '6F'\n",
+      " '5F' '1C']\n"
+     ]
+    }
+   ],
    "source": [
     "# Assess categorical variables: which are binary, which are multi-level, and\n",
-    "# which one needs to be re-encoded?\n",
-    "\n"
+    "# which ones needs to be re-encoded?\n",
+    "feat_cat_idx = feat_info_dropped.index[feat_info_dropped['type']=='categorical']\n",
+    "cat_idx = azdias_low_nans.iloc[:,feat_cat_idx]\n",
+    "\n",
+    "print(\"Categorical Variables:\")\n",
+    "for col in cat_idx:\n",
+    "  print(f\"{col:20s} {azdias_low_nans[col].unique():}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Re-encode categorical variable(s) to be kept in the analysis.\n",
-    "\n"
+    "azdias_low_nans['OST_WEST_KZ'].replace({'O': 0, 'W': 1}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of redundant or unuseful columns to drop from dataset based off info in Data_Dictionary.md\n",
+    "columns_to_drop = ['LP_FAMILIE_FEIN', 'LP_LEBENSPHASE_FEIN', 'LP_STATUS_FEIN', 'HH_EINKOMMEN_SCORE',\n",
+    "                   'MIN_GEBAEUDEJAHR', 'CAMEO_DEU_2015', 'GEBAEUDETYP', 'PLZ8_BAUMAX', 'KBA13_ANZAHL_PKW']\n",
+    "\n",
+    "azdias_low_nans.drop(columns_to_drop, axis=1, inplace=True)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multi-level Categorical Variables to one-hot encode:\n",
+      "CJT_GESAMTTYP\n",
+      "FINANZTYP\n",
+      "GFK_URLAUBERTYP\n",
+      "LP_FAMILIE_GROB\n",
+      "LP_STATUS_GROB\n",
+      "NATIONALITAET_KZ\n",
+      "SHOPPER_TYP\n",
+      "ZABEOTYP\n",
+      "CAMEO_DEUG_2015\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Locate categorical variables after dropping columns in azdias_low_nans\n",
+    "feat_info_dropped = feat_info_dropped[~feat_info_dropped.attribute.isin(columns_to_drop)]\n",
+    "feat_info_dropped.reset_index(drop=True, inplace=True)\n",
+    "feat_cat_idx = feat_info_dropped.index[feat_info_dropped['type']==\"categorical\"]\n",
+    "cat_idx = azdias_low_nans.iloc[:,feat_cat_idx]\n",
+    "\n",
+    "# Create list of multi-level categorical columns to one-hot encode\n",
+    "print(\"Multi-level Categorical Variables to one-hot encode:\")\n",
+    "multi_cat_encode = []\n",
+    "for i in azdias_low_nans.iloc[:,feat_cat_idx]:\n",
+    "    if azdias_low_nans[i].dropna().unique().shape[0] > 2:\n",
+    "        multi_cat_encode.append(i)\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(780153, 117)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# One-hot encode multi-level categorical columns\n",
+    "azdias_encoded = pd.get_dummies(azdias_low_nans, columns=multi_cat_encode)\n",
+    "azdias_encoded.shape"
    ]
   },
   {
@@ -3330,7 +3437,9 @@
    "source": [
     "#### Discussion 1.2.1: Re-Encode Categorical Features\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your findings and decisions regarding categorical features. Which ones did you keep, which did you drop, and what engineering steps did you perform?)"
+    "Several columns were dropped in the dataset based on the information in Data_Dictionary.md. I dropped \"LP_FAMILIE_FEIN\", \"LP_LEBENSPHASE_FEIN\", \"LP_STATUS_FEIN\" and \"HH_EINKOMMEN_SCORE\" as redundant categories as the data in \"LP_FAMILIE_GROB\", \"LP_LEBENSPHASE_GROB\", \"LP_STATUS_GROB\" and \"LP_STATUS_Grob\" holds similar information. \"CAMEO_DEU_2015\" is dropped as \"CAMEO_DEUG_2015\" contains a more general form of similar data. \"MIN_GEBAEUDEJAHR\", \"GEBAEUDETYP\", \"PLZ8_BAUMAX\", \"KBA13_ANZAHL_PKW\" and \"KBA13_ANZAHL_PKW\" are dropped as they don't seem particularly useful to group the populace and could dilute the categorization later.\n",
+    "\n",
+    "The values of binary category 'OST_WEST_KZ' were transformed to 0 and 1 based values. Multi-level categories were identified and those that were kept were one-hot encoded. These steps will help ensure the data can be fit to the kmeans model later on properly."
    ]
   },
   {
