Add 'LP_LEBENSPHASE_GROB' to dropped columns list

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3252,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3305,7 +3305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3350,7 +3350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3360,20 +3360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# List of redundant or unuseful columns to drop from dataset based off info in Data_Dictionary.md\n",
-    "columns_to_drop = ['LP_FAMILIE_FEIN', 'LP_LEBENSPHASE_FEIN', 'LP_STATUS_FEIN', 'HH_EINKOMMEN_SCORE',\n",
-    "                   'MIN_GEBAEUDEJAHR', 'CAMEO_DEU_2015', 'GEBAEUDETYP', 'PLZ8_BAUMAX', 'KBA13_ANZAHL_PKW']\n",
+    "columns_to_drop = ['LP_FAMILIE_FEIN', 'LP_LEBENSPHASE_FEIN', 'LP_LEBENSPHASE_GROB', 'LP_STATUS_FEIN',\n",
+    "                   'HH_EINKOMMEN_SCORE', 'CAMEO_DEU_2015', 'MIN_GEBAEUDEJAHR', 'GEBAEUDETYP',\n",
+    "                   'PLZ8_BAUMAX', 'KBA13_ANZAHL_PKW']\n",
     "\n",
-    "azdias_low_nans.drop(columns_to_drop, axis=1, inplace=True)`"
+    "azdias_low_nans.drop(columns_to_drop, axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3411,16 +3412,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(780153, 117)"
+       "(780153, 116)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3437,7 +3438,7 @@
    "source": [
     "#### Discussion 1.2.1: Re-Encode Categorical Features\n",
     "\n",
-    "Several columns were dropped in the dataset based on the information in Data_Dictionary.md. I dropped \"LP_FAMILIE_FEIN\", \"LP_LEBENSPHASE_FEIN\", \"LP_STATUS_FEIN\" and \"HH_EINKOMMEN_SCORE\" as redundant categories as the data in \"LP_FAMILIE_GROB\", \"LP_LEBENSPHASE_GROB\", \"LP_STATUS_GROB\" and \"LP_STATUS_Grob\" holds similar information. \"CAMEO_DEU_2015\" is dropped as \"CAMEO_DEUG_2015\" contains a more general form of similar data. \"MIN_GEBAEUDEJAHR\", \"GEBAEUDETYP\", \"PLZ8_BAUMAX\", \"KBA13_ANZAHL_PKW\" and \"KBA13_ANZAHL_PKW\" are dropped as they don't seem particularly useful to group the populace and could dilute the categorization later.\n",
+    "Several columns were dropped in the dataset based on the information in Data_Dictionary.md. I dropped \"LP_FAMILIE_FEIN\", \"LP_LEBENSPHASE_FEIN\", \"LP_LEBENSPHASE_GROB\", \"LP_STATUS_FEIN\" and \"HH_EINKOMMEN_SCORE\" as redundant categories as the data in \"LP_FAMILIE_GROB\", \"CAMEO_INTL_2015\" and \"LP_STATUS_GROB\" holds similar information. \"CAMEO_DEU_2015\" is dropped as \"CAMEO_DEUG_2015\" contains a more general form of similar data. \"MIN_GEBAEUDEJAHR\", \"GEBAEUDETYP\", \"PLZ8_BAUMAX\" and \"KBA13_ANZAHL_PKW\" are dropped as they don't seem particularly useful to group the populace and could dilute the categorization later.\n",
     "\n",
     "The values of binary category 'OST_WEST_KZ' were transformed to 0 and 1 based values. Multi-level categories were identified and those that were kept were one-hot encoded. These steps will help ensure the data can be fit to the kmeans model later on properly."
    ]
@@ -3454,6 +3455,33 @@
     "- If you decide to keep or engineer new features around the other mixed-type features, make sure you note your steps in the Discussion section.\n",
     "\n",
     "Be sure to check `Data_Dictionary.md` for the details needed to finish these tasks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mixed-Type features:\n",
+      "PRAEGENDE_JUGENDJAHRE [14. 15.  8.  3. 10. 11.  5.  9.  6.  4. nan  2.  1. 12. 13.  7.]\n",
+      "WOHNLAGE             [4. 2. 7. 3. 5. 1. 8. 0.]\n",
+      "CAMEO_INTL_2015      ['51' '24' '12' '43' '54' '22' '14' '13' '15' '33' '41' '34' '55' '25' nan\n",
+      " '23' '31' '52' '35' '45' '44' '32']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify and locate Mixed-Type features\n",
+    "feat_mix_idx = feat_info_dropped.index[feat_info_dropped['type'] == \"mixed\"]\n",
+    "mix_idx = azdias_low_nans.iloc[:, feat_mix_idx]\n",
+    "\n",
+    "print(\"Mixed-Type features:\")\n",
+    "for col in mix_idx:\n",
+    "    print(f\"{col:20s} {azdias_low_nans[col].unique():}\")"
    ]
   },
   {
