Engineer Mixed-Type Features

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -3486,6 +3486,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Mixed-Type variable encode function\n",
+    "def mixed_encode(df, column_to_encode, encoded_column_name, encoding_dictionary):\n",
+    "    df[encoded_column_name] = df[column_to_encode]\n",
+    "    df[encoded_column_name].replace(encoding_dictionary, inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
