Create cleaning function and perform imputing and scaling on the dataset

--- a/Identify_Customer_Segments.ipynb
+++ b/Identify_Customer_Segments.ipynb
@@ -4594,7 +4594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4602,24 +4602,80 @@
     "    \"\"\"\n",
     "    Perform feature trimming, re-encoding, and engineering for demographics\n",
     "    data\n",
-    "    \n",
+    "\n",
     "    INPUT: Demographics DataFrame\n",
     "    OUTPUT: Trimmed and cleaned demographics DataFrame\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Put in code here to execute all main cleaning steps:\n",
     "    # convert missing value codes into NaNs, ...\n",
-    "    \n",
-    "    \n",
+    "    for idx in range(feat_info.shape[0]):\n",
+    "        cd_mis_unk = feat_info.iloc[idx]['missing_or_unknown']\n",
+    "        cd_mis_unk = cd_mis_unk.strip('[]').split(sep=',')\n",
+    "        cd_mis_unk = [int(value) if (value != 'X' and value != 'XX' and value != '')\n",
+    "                      else value for value in cd_mis_unk]\n",
+    "        df = df.replace({feat_info.iloc[idx]['attribute']: cd_mis_unk}, np.nan)\n",
+    "\n",
     "    # remove selected columns and rows, ...\n",
+    "    columns_to_drop_1 = ['AGER_TYP', 'GEBURTSJAHR', 'TITEL_KZ', 'ALTER_HH', 'KK_KUNDENTYP', 'KBA05_BAUMAX']\n",
     "\n",
-    "    \n",
+    "    df.drop(columns_to_drop_1, inplace=True, axis=1)\n",
+    "\n",
+    "    df_low_nan = df.loc[df.isnull().sum(axis=1) <= 10].copy()\n",
+    "\n",
+    "    df_high_nan = df.loc[df.isnull().sum(axis=1) > 10].copy()\n",
+    "\n",
+    "    columns_to_drop_2 = ['LP_FAMILIE_FEIN', 'LP_LEBENSPHASE_FEIN', 'LP_LEBENSPHASE_GROB', 'LP_STATUS_FEIN',\n",
+    "                         'HH_EINKOMMEN_SCORE', 'CAMEO_DEU_2015', 'MIN_GEBAEUDEJAHR', 'GEBAEUDETYP',\n",
+    "                         'PLZ8_BAUMAX', 'KBA13_ANZAHL_PKW']\n",
+    "\n",
+    "    df_low_nan.drop(columns_to_drop_2, inplace=True, axis=1)\n",
+    "\n",
     "    # select, re-encode, and engineer column values.\n",
+    "    df_low_nan['OST_WEST_KZ'].replace({'O': 0, 'W': 1}, inplace=True)\n",
     "\n",
-    "    \n",
-    "    # Return the cleaned dataframe.\n",
-    "    \n",
-    "    "
+    "    multi_cat_encode = ['CJT_GESAMTTYP', 'FINANZTYP', 'GFK_URLAUBERTYP', 'LP_FAMILIE_GROB', 'LP_STATUS_GROB',\n",
+    "                        'NATIONALITAET_KZ', 'SHOPPER_TYP', 'ZABEOTYP', 'CAMEO_DEUG_2015']\n",
+    "\n",
+    "    df_low_nan = pd.get_dummies(df_low_nan, columns=multi_cat_encode)\n",
+    "\n",
+    "    decade_dict = {1: 40, 2: 40, 3: 50, 4: 50, 5: 60, 6: 60, 7: 60,\n",
+    "                   8: 70, 9: 70, 10: 80, 11: 80, 12: 80, 13: 80, 14: 90, 15: 90}\n",
+    "\n",
+    "    movement_dict = {1: 1, 2: 0, 3: 1, 4: 0, 5: 1, 6: 0, 7: 0,\n",
+    "                     8: 1, 9: 0, 10: 1, 11: 0, 12: 1, 13: 0, 14: 1, 15: 0}\n",
+    "\n",
+    "    wealth_dict = {'11': 1, '12': 1, '13': 1, '14': 1, '15': 1, '21': 2, '22': 2, '23': 2, '24': 2, '25': 2,\n",
+    "                   '31': 3, '32': 3, '33': 3, '34': 3, '35': 3, '41': 4, '42': 4, '43': 4, '44': 4, '45': 4,\n",
+    "                   '51': 5, '52': 5, '53': 5, '54': 5, '55': 5}\n",
+    "\n",
+    "    life_stage_dict = {'11': 1, '12': 2, '13': 3, '14': 4, '15': 5, '21': 1, '22': 2, '23': 3, '24': 4, '25': 5,\n",
+    "                       '31': 1, '32': 2, '33': 3, '34': 4, '35': 5, '41': 1, '42': 2, '43': 3, '44': 4, '45': 5,\n",
+    "                       '51': 1, '52': 2, '53': 3, '54': 4, '55': 5}\n",
+    "\n",
+    "    neighborhood_dict = {1: 1, 2: 2, 3: 3, 4: 4, 5: 5, 7: np.nan, 8: np.nan}\n",
+    "\n",
+    "    rural_dict = {1: 0, 2: 0, 3: 0, 4: 0, 5: 0, 7: 1, 8: 1}\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'PRAEGENDE_JUGENDJAHRE', 'PRAEGENDE_JUGENDJAHRE_DECADE', decade_dict)\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'PRAEGENDE_JUGENDJAHRE', 'PRAEGENDE_JUGENDJAHRE_MOVEMENT', movement_dict)\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'CAMEO_INTL_2015', 'CAMEO_INTL_2015_WEALTH', wealth_dict)\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'CAMEO_INTL_2015', 'CAMEO_INTL_2015_LIFE_STAGE', life_stage_dict)\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'WOHNLAGE', 'NEIGHBORHOOD_QUALITY', neighborhood_dict)\n",
+    "\n",
+    "    df_low_nan = mixed_encode(df_low_nan, 'WOHNLAGE', 'RURAL_NEIGHBORHOOD', rural_dict)\n",
+    "\n",
+    "    df_low_nan.drop(['PRAEGENDE_JUGENDJAHRE', 'CAMEO_INTL_2015', 'WOHNLAGE'], inplace=True, axis=1)\n",
+    "\n",
+    "    # Return the cleaned dataframe.s\n",
+    "    df_low_nan.reset_index(drop=True, inplace=True)\n",
+    "    df_high_nan.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "    return df_low_nan, df_high_nan"
    ]
   },
   {
@@ -4639,23 +4695,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# If you've not yet cleaned the dataset of all NaN values, then investigate and\n",
     "# do that now.\n",
-    "\n"
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='most_frequent')\n",
+    "\n",
+    "# fit and transform the dataset by filling NaN values\n",
+    "azdias_imp = imputer.fit_transform(azdias_encoded)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Apply feature scaling to the general population demographics data.\n",
-    "\n"
+    "scaler = StandardScaler()\n",
+    "\n",
+    "azdias_scaled = scaler.fit_transform(azdias_imp)"
    ]
   },
   {
@@ -4664,7 +4725,9 @@
    "source": [
     "### Discussion 2.1: Apply Feature Scaling\n",
     "\n",
-    "(Double-click this cell and replace this text with your own text, reporting your decisions regarding feature scaling.)"
+    "Since the previous cleaning steps removed the columns and rows with the most nans, I wanted to keep the data that remained. I decided to use imputation, converting all nans to the most frequent value in the columns they were in. This allowed me to keep and scale all the data. One side effect of having converted the nans to the most frequent values in each column is that the dataset will contain an even greater percentage of those most frequent values. The benefits of keeping the data in order to have more datapoints to cluster the population seemed to outweigh the slight disproportion of the most frequent values.\n",
+    "\n",
+    "After imputation, feature scaling of all values is performed using sklearns StandarScaler class. This standardization of the data to a mean of 0 and standard deviation of 1 allows the data to be clustered properly by normalizing the data and removing the bias towards very large or very small feature scales."
    ]
   },
   {
